--- a/app/index.html
+++ b/app/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title></title>
+    <base href="/"/>
     <meta name="description" content="">
     <meta name="viewport" content="width=device-width">
     <!-- Place favicon.ico and apple-touch-icon.png in the root directory -->
@@ -33,26 +34,26 @@
               <span class="icon-bar"></span>
             </button>
 
-            <a class="navbar-brand" href="#/">angularJs</a>
+            <a class="navbar-brand" href="/">angularJs</a>
           </div>
 
           <div class="collapse navbar-collapse" id="js-navbar-collapse">
 
             <ul class="nav navbar-nav">
-              <li class="active"><a href="#/">Home</a></li>
-              <li><a ng-href="#/about">About</a></li>
-              <li><a ng-href="#/">Contact</a></li>
+              <li class="active"><a href="/">Home</a></li>
+              <li><a ng-href="/about">About</a></li>
+              <li><a ng-href="/">Contact</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
               <li>
-                <oauth2 
-                  authorization-url="https://accounts.google.com/o/oauth2/auth"
-                  sign-out-url="https://accounts.google.com/o/oauth2/revoke?token="
+                <oauth2
+                  authorization-url="http://localhost:4030/server/oauth/authorize"
+                  sign-out-url="http://localhost:9000/"
                   sign-out-append-token="true"
-                  client-id="*** GET YOUR OWN GOOGLE CLIENT ID ***"
-                  redirect-url="http://localhost:9000"
+                  client-id="client"
+                  redirect-url="http://localhost:9000/"
                   response-type="token"
-                  scope="openid"
+                  scope="read"
                 >
                 </oauth2>
               </li>
@@ -72,18 +73,6 @@
       </div>
     </div>
 
-
-    <!-- Google Analytics: change UA-XXXXX-X to be your site's ID -->
-     <script>
-       !function(A,n,g,u,l,a,r){A.GoogleAnalyticsObject=l,A[l]=A[l]||function(){
-       (A[l].q=A[l].q||[]).push(arguments)},A[l].l=+new Date,a=n.createElement(g),
-       r=n.getElementsByTagName(g)[0],a.src=u,r.parentNode.insertBefore(a,r)
-       }(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-
-       ga('create', 'UA-XXXXX-X');
-       ga('send', 'pageview');
-    </script>
-
     <!-- build:js(.) scripts/vendor.js -->
     <!-- bower:js -->
     <script src="bower_components/jquery/dist/jquery.js"></script>
@@ -96,14 +85,14 @@
     <script src="bower_components/angular-sanitize/angular-sanitize.js"></script>
     <script src="bower_components/angular-touch/angular-touch.js"></script>
     <script src="bower_components/ngstorage/ngStorage.js"></script>
-    <script src="bower_components/angularjs-oauth2/dist/angularJsOAuth2.js"></script>
+    <script src="bower_components/angular-md5/angular-md5.js"></script>
     <!-- endbower -->
     <!-- endbuild -->
-
         <!-- build:js({.tmp,app}) scripts/scripts.js -->
         <script src="scripts/app.js"></script>
         <script src="scripts/controllers/main.js"></script>
         <script src="scripts/controllers/about.js"></script>
+        <script src="scripts/services/angluar-oauth2-implicit.js"></script>
         <!-- endbuild -->
 </body>
 </html>
